03Dec00=======================================================================
1. change grepdbg and watchdbg so that you can see a number of lines before
the condx that you are looking for so:-
  grepdbg 3 LOOP
  watchdbg 3 LOOP 
will show both the LOOP line and the preceeding 2 lines.
2. add PCPROT to all error condx lines in DXProt.pm so that you can watch
for them more easily.
30Nov00=======================================================================
1. remove %nn strings from dups of announces and spots
2. remove check for ssids on PC41s 
29Nov00=======================================================================
1. make some small changes to DXmsg to try to track delete problems?
2. fix ann/full so it doesn't dup
27Nov00=======================================================================
1. alter sh/wcy output slightly
26Nov00=======================================================================
1. made it possible for sysop calls to be used on other nodes and still have
anti loop checking on PC16/17.
25Nov00=======================================================================
1. -l <nnn> now works on C client
2. -e toggles echo cancelling (normally on) on C client
20Nov00=======================================================================
1. added even more checking to PC16,17 and 39
19Nov00=======================================================================
1. improve reaping code a bit more.
2. put some extra checking in the PC16,17,19,21 code.
3. fix problem with the aliased user disappearing and loads of 'unitialised'
messages coming out.
16Nov00=======================================================================
1. Alter the process reaping code in cluster.pl to use waitpid
12Nov00=======================================================================
1. Fix lack 't' action in Filter.pm
08Nov00=======================================================================
1. fix cosmetic errors in for/oper for 'users'.